--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Charts</title>
         <script type="text/javascript" src="d3/d3.js"></script>
+        <script type="text/javascript" src="colorbrewer/colorbrewer.js"></script>
         <script type="text/javascript" src="js/helper.js"></script>
         <script type="text/javascript" src="js/Chart.js"></script>
         <script type="text/javascript" src="js/ColumnChart.js"></script>
@@ -14,18 +15,18 @@
         <div id="chartDiv2"></div>
         <script type="text/javascript">
 
-            var margin = {top: 30, right: 30, bottom: 30, left: 30};
-            var width = 300;
+            var margin = {top: 30, right: 60, bottom: 30, left: 60};
+            var width = 600;
             var height = 300;
 
             Chart.counter = 0;
 
-            var chart = new ColumnChart(width, height, margin, "#chartDiv");
-            chart.setData(generateRandomDataset(10, 20));
+            var chart = new ColumnChart(width, height, margin, "#chartDiv", colorbrewer.Blues[9]);
+            chart.setData(generateRandomDataset());
             chart.draw();
 
-            var chart2 = new BarChart(width, height, margin, "#chartDiv2");
-            chart2.setData(generateRandomDataset(10, 20));
+            var chart2 = new BarChart(width, height, margin, "#chartDiv2", colorbrewer.Greens[9]);
+            chart2.setData(generateRandomDataset());
             chart2.draw();
         </script>
     </body>
